import {SlashCommandSubcommandBuilder} from "@discordjs/builders";

export class SubCommand extends SlashCommandSubcommandBuilder {

}